# space-recognizer

./: .gitignore  GOAL_PLAN.md  README.md  config.yaml  config_legacy.yaml  pyproject.toml
benchmarks/: bench_gsplat.py  bench_models.py  compare_maps.py  headless_run.py  mesh_smoke.py  oak_smoke.py  perf_matrix.py  replay_smoke.py
docs/: MANUAL.md  benchmarks.md  cuda_windows.md  fix-plan-tilt-loop-viz.md  plan.md  research-fundamental-improvements.md  upgrade-plan.md
src/spacerec/: __init__.py  appearance.py  backend.py  calib.py  capture.py  config.py  depth.py  detect.py  device.py  directfusion.py  floor.py  geometry.py  graph.py  gs_backend.py  imu.py  loop.py  loopclosure.py  main.py  mesh.py  oak.py  objects.py  perf.py  persistence.py  replay.py  viz.py  vo.py  worldmap.py
tests/: test_appearance.py  test_backend.py  test_backend_pose.py  test_config.py  test_depth.py  test_directfusion.py  test_evidence.py  test_floor.py  test_geometry.py  test_imu.py  test_loop.py  test_loopclosure.py  test_main_backend_result.py  test_main_depth_policy.py  test_main_pose_safety.py  test_mesh.py  test_oak_depth.py  test_objects.py  test_perf.py  test_persistence.py  test_replay.py  test_replay_metrics.py  test_viz.py  test_vo.py
