[project]
name = "spacerec"
version = "0.1.0"
description = "Webcam-based real-time 3D space and object recognition on Apple Silicon"
requires-python = ">=3.12,<3.13"
# NOTE: depth-anything-3 (official ByteDance package) is installed separately with
# --no-deps because it pins numpy<2 and hard-depends on xformers (CUDA-only),
# while its code actually falls back to F.scaled_dot_product_attention — works on MPS.
# Its runtime deps are listed here explicitly instead.
# (The community wrapper awesome-depth-anything-3 was tried first but its
#  checkpoint loading is broken: near-constant depth output. Do not use it.)
dependencies = [
    "torch>=2.10",
    "torchvision",
    "numpy>=2",
    "scipy",
    "opencv-python",
    "ultralytics",
    "clip-anytorch",  # YOLOE 텍스트 토크나이저 (import name: clip)
    "lap>=0.5.12",
    "moviepy==1.0.3",
    "pycolmap",
    "rerun-sdk>=0.33",
    "open3d",
    "pyyaml",
    # deps of awesome-depth-anything-3 (sans numpy<2 pin)
    "einops",
    "e3nn",
    "evo",
    "huggingface-hub",
    "imageio",
    "kornia>=0.7.0",
    "omegaconf",
    "pillow",
    "plyfile",
    "safetensors",
    "trimesh",
    "typer>=0.12.0",
    "requests",
    "addict",
]

[project.optional-dependencies]
dev = ["pytest"]
oak = ["depthai==2.32.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/spacerec"]
